Closed Bug 964209 Opened 12 years ago Closed 12 years ago

[RTSP] Content process crash after bug 959861

Categories

(Core :: Audio/Video, defect, P1)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla30
blocking-b2g 1.4+
Tracking Status
firefox28 --- wontfix
firefox29 --- wontfix
firefox30 --- fixed
b2g-v1.4 --- fixed

People

(Reporter: bechen, Assigned: bechen)

References

Details

(Keywords: crash, regression, Whiteboard: [b2g-crash])

Attachments

(1 file, 2 obsolete files)

http://hg.mozilla.org/mozilla-central/diff/b68184d3213d/content/media/omx/MediaOmxReader.cpp RtspOmxReader override the |InitOmxDecoder|, but not set the |mExtractor| added by bug 959861.
Can we get a crash stack with this? What end user STR reproduces this bug?
Component: General → Video/Audio
Product: Firefox OS → Core
Assignee: nobody → bechen
Hi Jason, this bug happens when the user opens any RTSP streaming. Fortunately, this bug is only in mozilla-central, which means we don't have this issue in FFOS v1.3. And we already identified the root cause. Benjamin Chen is working on this. :)
(In reply to Ethan Tseng [:ethan] from comment #2) > Hi Jason, this bug happens when the user opens any RTSP streaming. > Fortunately, this bug is only in mozilla-central, which means we don't have > this issue in FFOS v1.3. > And we already identified the root cause. Benjamin Chen is working on this. > :) Sounds like a serious regression then.
blocking-b2g: --- → 1.4?
Keywords: regression
Attached patch bug-964209.patch (obsolete) — Splinter Review
Attachment #8366501 - Flags: review?(sworkman)
Comment on attachment 8366501 [details] [diff] [review] bug-964209.patch Review of attachment 8366501 [details] [diff] [review]: ----------------------------------------------------------------- Looks fine to me. Please verify that there are no other cases of mExtractor not being set. r=me.
Attachment #8366501 - Flags: review?(sworkman) → review+
Attached patch bug-964209.patch (obsolete) — Splinter Review
Attachment #8367167 - Flags: review+
Attachment #8366501 - Attachment is obsolete: true
Blocks: b2g-RTSP-2.0
Severity: normal → critical
Keywords: crash
Whiteboard: [b2g-crash]
It blocks 1.4 feature.
blocking-b2g: 1.4? → 1.4+
Priority: -- → P1
Attached patch bug-964209.patchSplinter Review
Attachment #8367167 - Attachment is obsolete: true
Attachment #8373102 - Flags: review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: