Bug 964209 - [RTSP] Implement flags() function and set mExtractor to fix content process crash. r=sworkman